# jupyter-exception-to-slack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/jupyter_exception_to_slack/: __init__.py  handlers.py
