[tool.poetry]
name = "jupyter-exception-to-slack"
version = "0.1.0"
description = "Contains a handler that automatically sends Jupyter exceptions to slack regardless of the cell in which the issue occurs."
authors = ["Luttik <dtluttik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"
pytest = "^6.2.4"
black = "^21.8b0"
isort = "^5.9.3"
invoke = "^1.6.0"
mypy = "^0.910"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-black = "^0.2.3"
flake8-isort = "^4.0.0"
types-requests = "^2.25.6"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
